--- a/readme
+++ b/readme
@@ -1,8 +1,8 @@
 
-        |
-      .'|'.
+		|
+	  .'|'.
 	 /.'|\ \		abc19
 	 | /|'.|		Dec 30 2024
-	  \ |\/			Reversing Problem
+	  \ |\/			Reversing Problems
 	   \|/
-	    `
+		`
